# hikari_firefly

./: .gitignore  Cargo.toml  cspell.yaml  expanded.rs
cli/: Cargo.toml
cli/src/: main.rs  tbp.rs
datagen/: Cargo.toml
datagen/src/: annotate.rs  data.rs  generate.rs  main.rs
firefly/: Cargo.toml
firefly/src/: lib.rs  mem.rs  search.rs  storage.rs
firefly/src/eval/: mod.rs  simple.rs  standard.rs
frontend/: Cargo.toml
frontend/src/: main.rs  render.rs
game/: Cargo.toml
game/src/: lib.rs  player.rs  tetris.rs
game/src/player/: tetris.rs
game/src/tetris/: mod.rs  movegen.rs  tbp.rs
gen_cc/: Cargo.toml
gen_cc/src/: main.rs
ordinal/: Cargo.toml
ordinal/src/: eval.rs  graph.rs  main.rs  movegen.rs  search.rs
trainer/: Pipfile
trainer/src/: autoencoder.py  data_load.py  device.py  eval.1.py  eval.py  eval2.py  msgpack_test.py  nnue.py  suggest.py  train.py  vit.py
