[package]
name = "firefly"
version = "0.1.0"
edition = "2021"

[dependencies]
bumpalo-herd = "0.1.2"
dashmap = "5.5.3"
enumset = "1.1.3"
futures = "0.3.30"
game = { path = "../game" }
once_cell = "1.19.0"
ouroboros = "0.18.4"
parking_lot = "0.12.3"
puffin = "0.19.1"
puffin_http = "0.16.1"
rand = "0.8.5"
rayon = "1.10.0"
serde = "1.0.208"
serde_json = "1.0.125"
smallvec = "1.13.2"
