[package]
name = "gen_cc"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
enumset = "1.1.3"
game = { path = "../game" }
parking_lot = "0.12.3"
rmp-serde = "1.3.0"
serde = "1.0.209"
serde_json = "1.0.127"
smallvec = { version = "1.13.2", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
